# dune2-data-toolset

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  conanfile.txt
Scripts/CMake/: Conan.cmake  Utils.cmake
Sources/: CMakeLists.txt  Dune2DataFiles.cmake
Sources/Dune2/: CMakeLists.txt  bmp.cpp  bmp.hpp  bswap.hpp  color.hpp  icn.cpp  icn.hpp  icon_set.cpp  icon_set.hpp  icon_set_load_from_json.cpp  icon_set_load_from_map.cpp  icon_set_to_json.cpp  iconset.cpp  iconset.hpp  iconset_load_from_map.cpp  image.cpp  image.hpp  image_load_from_cps.cpp  image_set.cpp  image_set.hpp  image_set_load_from_icn.cpp  image_set_load_from_json.cpp  image_set_load_from_shp.cpp  image_set_to_json.cpp  io.cpp  io.hpp  io_lcw.cpp  iterators.hpp  pak.cpp  pak.hpp  palette.cpp  palette.hpp  resource.cpp  resource.hpp  resources.cpp  resources.hpp  resources.proto  resources_json_export.cpp  shp.cpp  shp.hpp  (+7 more)
Sources/Dune2RC/: CMakeLists.txt  rc.proto
Sources/ICNToBMP/: CMakeLists.txt  main.cpp
Sources/PAKExtract/: CMakeLists.txt  main.cpp
Sources/PAKExtractor/: CMakeLists.txt  main.cpp  pak.cpp  pak.hpp
Sources/PALToBMP/: CMakeLists.txt  main.cpp
Sources/RCGenerator/: CMakeLists.txt  main.sh
Sources/RCToolkit/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
Sources/RCToolkit/commands/: export.cpp  extract.cpp  icons.cpp  iconset.cpp  images.cpp  palette.cpp  soundset.cpp  tileset.cpp
Sources/SHPToBMP/: CMakeLists.txt  main.cpp
Sources/VOCBatchConvert/: CMakeLists.txt  voc-batch-convert
