project(VOCBatchConvert)

nr_case_camel_to_snake("${PROJECT_NAME}" TARGET_OUTPUT_NAME)

install(
  FILES "${CMAKE_CURRENT_SOURCE_DIR}/voc-batch-convert"
  TYPE BIN
  PERMISSIONS
    OWNER_READ OWNER_WRITE OWNER_EXECUTE
    GROUP_READ GROUP_EXECUTE
    WORLD_READ WORLD_EXECUTE
  RENAME "dune2-${TARGET_OUTPUT_NAME}"
)